maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:30: error: ';' expected but ')' found.
def allerAuNord(){while (!estFaceMur())isDirectionFree(Direction.NORD))
                                                                      ^